--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -497,7 +497,7 @@
   justify-content: space-between;
 }
 
-input[type="radio"] {
+input[type="radio"].tabs-join-radio {
   appearance: none;
   background-color: #fff;
   box-shadow: inset 1em 1em var(--primary-p50);
@@ -508,7 +508,7 @@ input[type="radio"] {
   display: grid;
 }
 
-input[type="radio"]::before {
+input[type="radio"].tabs-join-radio::before {
   content: "";
   border-radius: 50%;
   transform: scale(0);
@@ -516,7 +516,7 @@ input[type="radio"]::before {
   box-shadow: inset 1em 1em var(--primary);
 }
 
-input[type="radio"]:checked::before {
+input[type="radio"].tabs-join-radio:checked::before {
   transform: scale(1);
 }
 
