--- a/layouts/_sitehead.html
+++ b/layouts/_sitehead.html
@@ -38,12 +38,14 @@
   <link rel="stylesheet" type="text/css" href="/style/lists.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/breadcrumbs.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/buttons.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="/style/tables.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/announcement.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/hero.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/bioconductor.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/header.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/home.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/style/footer.css" media="screen"/>
+  <link rel="stylesheet" type="text/css" href="/style/packages.css" media="screen"/>
   <link rel="SHORTCUT ICON" type="image/x-icon" href="/favicon.ico" />
   <link rel="ICON" type="image/x-icon" href="/favicon.ico" />
 
