--- a/assets/style/bioconductor.css
+++ b/assets/style/bioconductor.css
@@ -24,6 +24,8 @@ main > .container.main-subnav {
 }
 
 .left-col {
+  height: 100%;
+  position: relative;
   grid-area: left-col;
   display: flex;
   flex-direction: column;
