--- a/layouts/_bioc_release_packages.html
+++ b/layouts/_bioc_release_packages.html
@@ -1,6 +1,6 @@
-<div class="shaded_box">
+<div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header">Packages <span class="olive">&raquo;</span></p>
+  <p class="sidebar-box-header">Packages <span class="olive">&raquo;</span></p>
   <p><em>Bioconductor's</em> stable, semi-annual release:</p>
   <ul>
     <li>Analysis <a class="symlink" href="/packages/release/BiocViews.html#___Software">software</a> packages.</li>
