--- a/layouts/_bioc_devel_packages.html
+++ b/layouts/_bioc_devel_packages.html
@@ -1,18 +1,34 @@
-<div class="shaded_box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header">Development Version
-    <span class="olive">&raquo;</span></p>
+<div class="sidebar-box">
+  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
+  <p class="sidebar-box-header">
+    Development Version <span class="olive">&raquo;</span>
+  </p>
   <p>Bioconductor packages under development:</p>
   <ul>
-    <% devel_repos = config[:devel_repos] %>
-    <% if devel_repos.include? "bioc" %>
-    <li>Analysis <a class="symlink" href="/packages/devel/BiocViews.html#___Software">software</a> packages.</li>
-    <% end %>
-    <% if devel_repos.include? "data/annotation" %>
-    <li><a class="symlink" href="/packages/devel/BiocViews.html#___AnnotationData">Annotation</a> packages</li>
-    <% end %>
-    <% if devel_repos.include? "data/experiment" %>
-    <li>Illustrative <a class="symlink" href="/packages/devel/BiocViews.html#___ExperimentData">experiment data</a> packages</li>
+    <% devel_repos = config[:devel_repos] %> <% if devel_repos.include? "bioc"
+    %>
+    <li>
+      Analysis
+      <a class="symlink" href="/packages/devel/BiocViews.html#___Software"
+        >software</a
+      >
+      packages.
+    </li>
+    <% end %> <% if devel_repos.include? "data/annotation" %>
+    <li>
+      <a class="symlink" href="/packages/devel/BiocViews.html#___AnnotationData"
+        >Annotation</a
+      >
+      packages
+    </li>
+    <% end %> <% if devel_repos.include? "data/experiment" %>
+    <li>
+      Illustrative
+      <a class="symlink" href="/packages/devel/BiocViews.html#___ExperimentData"
+        >experiment data</a
+      >
+      packages
+    </li>
     <% end %>
   </ul>
   <p>Developer Resources:</p>
