--- a/layouts/_compendia.html
+++ b/layouts/_compendia.html
@@ -1,7 +1,6 @@
-<div class="shaded_box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header">Compendia
-  <span class="olive">&raquo;</span></p>
+<div class="sidebar-box">
+  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
+  <p class="sidebar-box-header">Compendia <span class="olive">&raquo;</span></p>
   <ul>
     <li><a href="compendia/genemetaex/">GeneMetaEx</a></li>
     <li><a href="compendia/golubrr/">GolubRR</a></li>
