--- a/layouts/_course_materials.html
+++ b/layouts/_course_materials.html
@@ -1,12 +1,14 @@
-<div class="shaded_box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header">
+<div class="sidebar-box">
+  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
+  <p class="sidebar-box-header">
     <a href="/help/course-materials/">Courses &amp; Conferences</a>
-    <span class="olive">&raquo;</span></p>
-  <p>Bioconductor courses and conferences explore R programming and
-    the analysis of genomic data. View catalog of
-    a <a href="/help/course-materials/">recent course
-    material</a>.</p>
+    <span class="olive">&raquo;</span>
+  </p>
+  <p>
+    Bioconductor courses and conferences explore R programming and the analysis
+    of genomic data. View catalog of a
+    <a href="/help/course-materials/">recent course material</a>.
+  </p>
   <ul class="inline_list">
     <% course_materials.each do |item| %>
     <li><a href="<%= item.identifier %>"><%= item[:title] %></a></li>
