--- a/layouts/_documentation.html
+++ b/layouts/_documentation.html
@@ -1,20 +1,32 @@
-<div class="shaded_box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header">Documentation <span class="olive">&raquo;</span></p>
+<div class="sidebar-box">
+  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
+  <p class="sidebar-box-header">
+    Documentation <span class="olive">&raquo;</span>
+  </p>
   <p><em>Bioconductor</em></p>
   <ul>
-    <li>Package <a href="/help/package-vignettes/">vignettes</a> and manuals.
-    <li><a href="/packages/release/workflows/">Workflows</a> for
-      learning and use.</li>
-    <li>Several <a href="/books/release/">online books</a> for comprehensive
-      coverage of a particular research field, biological question,
-      or technology.</li>
-    <li><a href="/help/course-materials/">Course and conference</a>
-      material.</li>
+    <li>
+      Package <a href="/help/package-vignettes/">vignettes</a> and manuals.
+    </li>
+    <li>
+      <a href="/packages/release/workflows/">Workflows</a> for learning and use.
+    </li>
+    <li>
+      Several <a href="/books/release/">online books</a> for comprehensive
+      coverage of a particular research field, biological question, or
+      technology.
+    </li>
+    <li>
+      <a href="/help/course-materials/">Course and conference</a> material.
+    </li>
     <li><a href="https://www.youtube.com/user/bioconductor">Videos</a>.</li>
-    <li>Community <a href="/help/community/">resources</a>
-      and <a href="https://support.bioconductor.org/t/Tutorials/">tutorials</a>.</li>
+    <li>
+      Community <a href="/help/community/">resources</a> and
+      <a href="https://support.bioconductor.org/t/Tutorials/">tutorials</a>.
+    </li>
   </ul>
-  <p><em>R</em> / <a href="http://cran.r-project.org/">CRAN</a> packages and
-   <a href="http://www.r-project.org/other-docs.html">documentation</a></p>
+  <p>
+    <em>R</em> / <a href="http://cran.r-project.org/">CRAN</a> packages and
+    <a href="http://www.r-project.org/other-docs.html">documentation</a>
+  </p>
 </div>
