--- a/layouts/_learn.html
+++ b/layouts/_learn.html
@@ -1,6 +1,6 @@
-<div class="shaded_box">
+<div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header">Learn <span class="olive">&raquo;</span></p>
+  <p class="sidebar-box-header">Learn <span class="olive">&raquo;</span></p>
   <p>Some Useful <em>Bioconductor</em> tools</p>
   <ul>
     <li><a class="symlink" href="/help/course-materials/">Courses</a></li>
