--- a/layouts/_publications.html
+++ b/layouts/_publications.html
@@ -1,6 +1,6 @@
-<div class="shaded_box">
+<div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header"><a href="/help/publications/">Publications</a>
+  <p class="sidebar-box-header"><a href="/help/publications/">Publications</a>
   <span class="olive">&raquo;</span></p>
   <p>Scientific literature</p>
   <ul>
