--- a/layouts/_registration.html
+++ b/layouts/_registration.html
@@ -1,6 +1,6 @@
-<div class="shaded_box">
+<div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header">Logistics</p>
+  <p class="sidebar-box-header">Logistics</p>
 
   <h3>
       <a href="https://register.bioconductor.org/BioC2015/">Registration
