--- a/layouts/_support.html
+++ b/layouts/_support.html
@@ -1,15 +1,21 @@
-<div class="shaded_box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header"><a href="https://support.bioconductor.org/">Support</a>
-  <span class="olive">&raquo;</span></p>
+<div class="sidebar-box">
+  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
+  <p class="sidebar-box-header">
+    <a href="https://support.bioconductor.org/">Support</a>
+    <span class="olive">&raquo;</span>
+  </p>
   <p>
-    Please read the <a href="/help/support/posting-guide/">posting
-    guide</a>. Post questions about Bioconductor
-    to one of the following locations:</p>
+    Please read the <a href="/help/support/posting-guide/">posting guide</a>.
+    Post questions about Bioconductor to one of the following locations:
+  </p>
   <ul>
-    <li><a href="https://support.bioconductor.org/">Support site</a> -
-        for questions about Bioconductor packages</li>
-    <li><a href="/help/support/#bioc-devel">Bioc-devel</a> mailing
-        list - for package developers</li>
+    <li>
+      <a href="https://support.bioconductor.org/">Support site</a> - for
+      questions about Bioconductor packages
+    </li>
+    <li>
+      <a href="/help/support/#bioc-devel">Bioc-devel</a> mailing list - for
+      package developers
+    </li>
   </ul>
 </div>
