--- a/layouts/_technical_reports_and_working_papers.html
+++ b/layouts/_technical_reports_and_working_papers.html
@@ -1,10 +1,16 @@
-<div class="shaded_box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="box_header">Technical Reports &amp; Working Papers
-  <span class="olive">&raquo;</span></p>
+<div class="sidebar-box">
+  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
+  <p class="sidebar-box-header">
+    Technical Reports &amp; Working Papers <span class="olive">&raquo;</span>
+  </p>
   <ul>
     <li><a href="tech-reports/">Technical Reports</a></li>
-    <li><a href="http://www.bepress.com/bioconductor/">Working Papers</a> (<a href="http://www.bepress.com/bioconductor/authors.instructions.html">Instructions for Authors</a>)</li>
+    <li>
+      <a href="http://www.bepress.com/bioconductor/">Working Papers</a> (<a
+        href="http://www.bepress.com/bioconductor/authors.instructions.html"
+        >Instructions for Authors</a
+      >)
+    </li>
   </ul>
   &nbsp;
 </div>
