get-started page completed

--- a/layouts/components/index_hero.html
+++ b/layouts/components/index_hero.html
@@ -1,4 +1,4 @@
-<h1 class="text-hero format-bold">
+<h1 class="homepage-hero text-hero format-bold">
   Open source software for <mark>Bioinformatics</mark>
 </h1>
 <p class="text-large">
