--- a/assets/style/get-started.css
+++ b/assets/style/get-started.css
@@ -1,14 +1,13 @@
 .install-hero {
-  max-width: 1400px;
-  width: calc(100% - 3rem);
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding-top: 0.5rem;
 }
 
 .get-started-h1 {
-  color: var(--misc-dark);
+  color: var(--misc-dark) !important;
 }
 
 .install-row {
@@ -22,11 +21,16 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding-bottom: 2rem;
 }
 
 .instructions-install p {
   text-align: left;
   margin: 0 0 1rem;
+}
+
+.instructions-install a {
+  color: var(--misc-dark);
 }
 
 .warmcool-gradient {
@@ -43,7 +47,6 @@
   border-radius: 0.5rem;
   display: flex;
   flex-direction: row;
-  padding: 1.5rem 1.5rem 0 1.5rem;
   margin: 1px;
 }
 
@@ -51,14 +54,18 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  padding: 1.5rem 1.5rem 0 1.5rem;
 }
 
 .install-blockquote {
   border-left: 2px solid var(--misc-purple);
   background-color: transparent;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
+  padding: 0;
+  padding-left: 10px;
+  gap: 10px;
 }
 
 .install-section {
@@ -68,4 +75,32 @@
 
 .install-section a {
   color: black;
+}
+
+.code-install {
+  margin-top: 1.6rem;
+  width: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.06),
+    0px 2px 5px 0px rgba(0, 0, 0, 0.06), 0px 10px 10px 0px rgba(0, 0, 0, 0.05),
+    0px 22px 13px 0px rgba(0, 0, 0, 0.03), 0px 39px 16px 0px rgba(0, 0, 0, 0.01),
+    0px 61px 17px 0px rgba(0, 0, 0, 0);
+}
+
+.step-1 {
+  padding-bottom: 0.5rem;
+}
+
+.step-3 {
+  align-self: end;
+}
+
+@media (width <= 678px) {
+  .instructions-install img {
+    display: none;
+  }
+
+  .install-row {
+    flex-direction: column;
+    width: -webkit-fill-available;
+  }
 }
