--- a/assets/style/hero.css
+++ b/assets/style/hero.css
@@ -3,11 +3,15 @@
   margin: 0 auto;
   text-align: center;
   background-color: white;
-  padding: 4.5rem 0;
+  padding-top: 2rem;
 }
 
 .hero h1 {
   color: var(--primary-p500);
+}
+
+.homepage-hero {
+  padding-top: 2rem;
 }
 
 /* stylelint-disable */
