--- a/layouts/components/install_hero.html
+++ b/layouts/components/install_hero.html
@@ -14,7 +14,39 @@
         version 4.3.0. More recent ‘devel’ versions of R (if available) will be
         supported during the next Bioconductor release cycle.
       </p>
-      <!-- img -->
+      <img src="/images/icons/Step 1 quote.svg" alt="blank_" class="step-1" />
+      <div class="warmcool-gradient">
+        <div class="install-row">
+          <div class="install-content">
+            <blockquote class="install-blockquote">
+              <p class="format-bold">1.</p>
+              <p>
+                Download the most recent version of R. The R FAQs and the R
+                Installation and Administration Manual contain detailed
+                instructions for installing R on various platforms (Linux, OS X,
+                and Windows being the main ones).
+              </p>
+            </blockquote>
+            <blockquote class="install-blockquote">
+              <p class="format-bold">2.</p>
+              <p>
+                Start the R program; on Windows and OS X, this will usually mean
+                double-clicking on the R application, on UNIX-like systems, type
+                “R” at a shell prompt.
+              </p>
+            </blockquote>
+            <blockquote class="install-blockquote">
+              <p class="format-bold">3.</p>
+              <p>
+                As a first step with R, start the R help browser by typing
+                <strong>help.start()</strong> in the R command window. For help
+                on any function, e.g. the “mean” function, type
+                <strong>?mean</strong>.
+              </p>
+            </blockquote>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="instructions-install">
       <h4>2. Get latest version of Bioconductor</h4>
@@ -32,57 +64,29 @@
       </p>
       <p>
         Details, including instructions to
-        <a>install additional packages</a> and to <a>update,</a>
-        <a>find,</a> and <a>troubleshoot</a> are provided below. A
+        <a href="#install-bioconductor-packages">install additional packages</a>
+        and to <a href="#update-bioconductor-packages">update,</a>
+        <a href="#find-bioconductor-packages">find,</a> and
+        <a href="#troubleshoot-bioconductor-packages">troubleshoot</a> are
+        provided below. A
         <a href="https://contributions.bioconductor.org/use-devel.html"
           >devel</a
         >
         version of Bioconductor is available. There are good
-        <a>reasons for using BiocManager::install()</a> for managing
-        Bioconductor resources.
+        <a href="#why-biocmanagerinstall"
+          >reasons for using <strong>BiocManager::install()</strong></a
+        >
+        for managing Bioconductor resources.
       </p>
-    </div>
-  </div>
-  <div class="install-row">
-    <div class="warmcool-gradient">
-      <div class="install-row">
-        <div class="install-content">
-          <blockquote class="install-blockquote">
-            <h4>1.</h4>
-            <p>
-              Download the most recent version of R. The R FAQs and the R
-              Installation and Administration Manual contain detailed
-              instructions for installing R on various platforms (Linux, OS X,
-              and Windows being the main ones).
-            </p>
-          </blockquote>
-          <blockquote class="install-blockquote">
-            <h4>2.</h4>
-            <p>
-              Start the R program; on Windows and OS X, this will usually mean
-              double-clicking on the R application, on UNIX-like systems, type
-              “R” at a shell prompt.
-            </p>
-          </blockquote>
-          <blockquote class="install-blockquote">
-            <h4>3.</h4>
-            <p>
-              As a first step with R, start the R help browser by typing
-              help.start() in the R command window. For help on any function,
-              e.g. the “mean” function, type ?mean.
-            </p>
-          </blockquote>
-        </div>
-        <div class="install-content">
-          <pre>
+      <pre class="code-install">
         <code class="light nohighlight">
         if (!require("BiocManager", quietly = TRUE))
         install.packages("BiocManager")
         BiocManager::install(version = "3.17")
         </code>
         </pre>
-        </div>
-      </div>
+      <img src="/images/icons/Step 2 quote.svg" alt="blank_" class="step-2" />
+      <img src="/images/icons/Step 3 quote.svg" alt="blank_" class="step-3" />
     </div>
   </div>
 </div>
