--- a/assets/style/get-started.css
+++ b/assets/style/get-started.css
@@ -10,12 +10,6 @@
   color: var(--misc-dark) !important;
 }
 
-.install-row {
-  display: flex;
-  flex-direction: row;
-  gap: 3rem;
-}
-
 .instructions-install {
   flex: 1;
   display: flex;
@@ -36,10 +30,9 @@
 .warmcool-gradient {
   background-image: var(--gradient-reversewarmcool);
   border-radius: 0.5rem;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.06),
-    0px 2px 5px 0px rgba(0, 0, 0, 0.06), 0px 10px 10px 0px rgba(0, 0, 0, 0.05),
-    0px 22px 13px 0px rgba(0, 0, 0, 0.03), 0px 39px 16px 0px rgba(0, 0, 0, 0.01),
-    0px 61px 17px 0px rgba(0, 0, 0, 0);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.06),
+    0 10px 10px 0 rgba(0, 0, 0, 0.05), 0 22px 13px 0 rgba(0, 0, 0, 0.03),
+    0 39px 16px 0 rgba(0, 0, 0, 0.01), 0 61px 17px 0 rgba(0, 0, 0, 0);
 }
 
 .install-row {
@@ -48,13 +41,14 @@
   display: flex;
   flex-direction: row;
   margin: 1px;
+  gap: 3rem;
 }
 
 .install-content {
   display: flex;
   flex-direction: column;
   flex: 1;
-  padding: 1.5rem 1.5rem 0 1.5rem;
+  padding: 1.5rem 1.5rem 0;
 }
 
 .install-blockquote {
@@ -80,10 +74,9 @@
 .code-install {
   margin-top: 1.6rem;
   width: 100%;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.06),
-    0px 2px 5px 0px rgba(0, 0, 0, 0.06), 0px 10px 10px 0px rgba(0, 0, 0, 0.05),
-    0px 22px 13px 0px rgba(0, 0, 0, 0.03), 0px 39px 16px 0px rgba(0, 0, 0, 0.01),
-    0px 61px 17px 0px rgba(0, 0, 0, 0);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.06),
+    0 10px 10px 0 rgba(0, 0, 0, 0.05), 0 22px 13px 0 rgba(0, 0, 0, 0.03),
+    0 39px 16px 0 rgba(0, 0, 0, 0.01), 0 61px 17px 0 rgba(0, 0, 0, 0);
 }
 
 .step-1 {
@@ -101,6 +94,8 @@
 
   .install-row {
     flex-direction: column;
+
+    /* stylelint-disable-next-line value-no-vendor-prefix */
     width: -webkit-fill-available;
   }
 }
