--- a/layouts/components/packages/archives.html
+++ b/layouts/components/packages/archives.html
@@ -5,8 +5,8 @@
 <table class="full-width">
   <tr>
     <td>Source Package</td>
-    <td class="rpack"><a href="../<%=@package[:"source.ver"]%>">
-      <%= base_filename(@package[:"source.ver"]) %></a>
+    <td class="rpack">
+      <a href="../<%=@package[:"source.ver"]%>"><%= base_filename(@package[:"source.ver"]) %></a>
     </td>
   </tr>
 
@@ -33,11 +33,11 @@
 
 <% if package_has_source_url(@item) %>
   <tr>
-    <td id="svn_source">Source Repository</td>
+    <td id="svn-source">Source Repository</td>
     <td>git clone <%=get_source_url(@package, @item, @item_rep, "https")%></td>
   </tr>
   <tr>
-    <td id="svn_source">Source Repository (Developer Access)</td>
+    <td id="svn-source">Source Repository (Developer Access)</td>
     <td>git clone <%=get_source_url(@package, @item, @item_rep, "ssh")%></td>
   </tr>
 <% end %>
