--- a/layouts/components/packages/badges.html
+++ b/layouts/components/packages/badges.html
@@ -14,31 +14,31 @@
 	  <% end %>
   <% end %>
 
-  <a href="#archives"><img border="0" src="<%=av_img%>" title="Whether the package is available on all platforms; click for details."/></a>
+  <a href="#archives"><img src="<%=av_img%>" title="Whether the package is available on all platforms; click for details."/></a>
 
   <%# shield 2: downloads %>
   <% res = isReleaseOrDevel(@item) %>
   <% path = "assets"+"/shields/downloads/"+res+"/"+@item[:Package]+".svg" %>
   <% if File.exist?(path) %>
-	  <a href="<%=get_stats_url(@item)%>"><img border='0' src="/shields/downloads/<%=isReleaseOrDevel(@item)%>/<%=@item[:Package]%>.svg" title="Ranking by number of downloads. A lower number means the package is downloaded more frequently. Determined within a package type (software, experiment, annotation, workflow) and uses the number of distinct IPs for the last 12 months."/></a>
+	  <a href="<%=get_stats_url(@item)%>"><img src="/shields/downloads/<%=isReleaseOrDevel(@item)%>/<%=@item[:Package]%>.svg" title="Ranking by number of downloads. A lower number means the package is downloaded more frequently. Determined within a package type (software, experiment, annotation, workflow) and uses the number of distinct IPs for the last 12 months."/></a>
   <% else %>
-	  <a href="<%=get_stats_url(@item)%>"><img border='0' src="/images/shields/downloads/unknown-downloads.svg" title="Ranking by number of downloads. A lower number means the package is downloaded more frequently. Determined within a package type (software, experiment, annotation, workflow) and uses the number of distinct IPs for the last 12 months."/></a>
+	  <a href="<%=get_stats_url(@item)%>"><img src="/images/shields/downloads/unknown-downloads.svg" title="Ranking by number of downloads. A lower number means the package is downloaded more frequently. Determined within a package type (software, experiment, annotation, workflow) and uses the number of distinct IPs for the last 12 months."/></a>
   <% end %>
 
   <%# shield 3: posts %>
   <% path = "assets"+"/shields/posts/"+@item[:Package]+".svg" %>
   <% if File.exist?(path) %>
-	  <a href="https://support.bioconductor.org/tag/<%=@item[:Package].downcase%>"><img border='0' src="/shields/posts/<%=@item[:Package]%>.svg" title="Support site activity, last 6 months: answered posts / total posts."/></a>
+	  <a href="https://support.bioconductor.org/tag/<%=@item[:Package].downcase%>"><img src="/shields/posts/<%=@item[:Package]%>.svg" title="Support site activity, last 6 months: answered posts / total posts."/></a>
   <% else %>
-	  <a href="https://support.bioconductor.org/tag/<%=@item[:Package].downcase%>"><img border='0' src="/images/shields/posts/unknown-posts.svg" title="Support site activity, last 6 months: answered posts / total posts."/></a>
+	  <a href="https://support.bioconductor.org/tag/<%=@item[:Package].downcase%>"><img src="/images/shields/posts/unknown-posts.svg" title="Support site activity, last 6 months: answered posts / total posts."/></a>
   <% end %>
 
   <%# shield 4: years in bioc %>
   <% result = get_year_shield(@item) %>
   <% if @item[:repo] == 'bioc/' and not result.nil? %>
-	  <a href="#since"><img border="0" src="/shields/years-in-bioc/<%=@item[:Package]%>.svg" title="How long since the package was first in a released Bioconductor version (or is it in devel only)."/></a>
+	  <a href="#since"><img src="/shields/years-in-bioc/<%=@item[:Package]%>.svg" title="How long since the package was first in a released Bioconductor version (or is it in devel only)."/></a>
   <% elsif @item[:repo] == 'bioc/' and result.nil? %>
-	  <a href="#since"><img border="0" src="/images/shields/in-bioc/unknown-bioc.svg" title="How long since the package was first in a released Bioconductor version (or is it in devel only)."/></a>
+	  <a href="#since"><img src="/images/shields/in-bioc/unknown-bioc.svg" title="How long since the package was first in a released Bioconductor version (or is it in devel only)."/></a>
   <% end %>
 
 
@@ -47,9 +47,9 @@
   <% unless res.nil? %>
     <% path = "assets"+"/shields/build/"+res[:version]+"/"+res[:repo]+"/"+@item[:Package]+".svg" %>
     <% if File.exist?(path) %>
-      <a href="<%=res[:report_url]%>"><img border='0' src="/shields/build/<%=res[:version]%>/<%=res[:repo]%>/<%=@item[:Package]%>.svg" title="build results; click for full report"/></a>
+      <a href="<%=res[:report_url]%>"><img src="/shields/build/<%=res[:version]%>/<%=res[:repo]%>/<%=@item[:Package]%>.svg" title="build results; click for full report"/></a>
     <% else %>
-      <a href="<%=res[:report_url]%>"><img border='0' src="/images/shields/builds/unknown-builds.svg" title="build results; click for full report"/></a>
+      <a href="<%=res[:report_url]%>"><img src="/images/shields/builds/unknown-builds.svg" title="build results; click for full report"/></a>
     <% end %>
   <% end %>
 
@@ -58,11 +58,11 @@
    <% path = "assets"+"/shields/lastcommit/"+res[:version]+"/"+res[:repo]+"/"+@item[:Package]+".svg" %>
 	 <% if File.exist?(path) %>
       <a href="<%=res[:report_url]%>">
-        <img border='0' src="/shields/lastcommit/<%=res[:version]%>/<%=res[:repo]%>/<%=@item[:Package]%>.svg" title="time since last commit. possible values: today, < 1 week, < 1 month, < 3 months, since release, before release"/>
+        <img src="/shields/lastcommit/<%=res[:version]%>/<%=res[:repo]%>/<%=@item[:Package]%>.svg" title="time since last commit. possible values: today, < 1 week, < 1 month, < 3 months, since release, before release"/>
       </a>
     <% else %>
       <a href="<%=res[:report_url]%>">
-        <img border='0' src="/images/shields/lastcommit/Unknown.svg" title="time since last commit. possible values: today, < 1 week, < 1 month, < 3 months, since release, before release"/>
+        <img src="/images/shields/lastcommit/Unknown.svg" title="time since last commit. possible values: today, < 1 week, < 1 month, < 3 months, since release, before release"/>
       </a>
 	  <% end %>
   <% end %>
@@ -71,9 +71,9 @@
   <% if ['bioc/', 'data/experiment/', 'workflows/'].include? @item[:repo] %>
 	  <% path = "assets" + "/shields/dependencies/" + res[:version] + "/" + @item[:Package] + ".svg" %>
 	  <% if File.exist?(path) %>
-	    <span class="do_not_rebase"><a href="#since"><img border="0" src="/shields/dependencies/<%=res[:version]%>/<%=@item[:Package]%>.svg" title="Number of recursive dependencies needed to install package."/></a></span>
+	    <a href="#since"><img src="/shields/dependencies/<%=res[:version]%>/<%=@item[:Package]%>.svg" title="Number of recursive dependencies needed to install package."/></a>
 	  <% else %>
-	    <span class="do_not_rebase"><a href="#since"><img border="0" src="/images/shields/dependencies/unknown-dependencies.svg" title="Number of recursive dependencies need to install package."/></a></span>
+	    <a href="#since"><img src="/images/shields/dependencies/unknown-dependencies.svg" title="Number of recursive dependencies need to install package."/></a>
 	  <% end %>
   <% end %>
 
