--- a/layouts/_bioc_devel_packages.html
+++ b/layouts/_bioc_devel_packages.html
@@ -1,8 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">
-    Development Version <span class="olive">&raquo;</span>
-  </p>
+  <p class="sidebar-box-header">Development Version</p>
   <p>Bioconductor packages under development:</p>
   <ul>
     <% devel_repos = config[:devel_repos] %> <% if devel_repos.include? "bioc"
