--- a/layouts/_develop.html
+++ b/layouts/_develop.html
@@ -1,6 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">Develop <span class="olive">&raquo;</span></p>
+  <p class="sidebar-box-header">Develop</p>
   <p>Contribute to <em>Bioconductor</em></p>
   <ul>
     <li><a class="symlink" href="/developers/">Developer resources</a></li>
