--- a/layouts/_package_build_reports_and_svn.html
+++ b/layouts/_package_build_reports_and_svn.html
@@ -1,8 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">
-    Source Code &amp; Build Reports <span class="olive">&raquo;</span>
-  </p>
+  <p class="sidebar-box-header">Source Code &amp; Build Reports</p>
   <p>
     Source code is stored in
     <a href="https://contributions.bioconductor.org/git-version-control.html"
