--- a/layouts/_technical_reports_and_working_papers.html
+++ b/layouts/_technical_reports_and_working_papers.html
@@ -1,8 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">
-    Technical Reports &amp; Working Papers <span class="olive">&raquo;</span>
-  </p>
+  <p class="sidebar-box-header">Technical Reports &amp; Working Papers</p>
   <ul>
     <li><a href="tech-reports/">Technical Reports</a></li>
     <li>
