--- a/layouts/_use.html
+++ b/layouts/_use.html
@@ -1,6 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="sidebar-box-header">Use <span class="olive">&raquo;</span></p>
+  <p class="sidebar-box-header">Use </p>
   <p>Create bioinformatic solutions with <em>Bioconductor</em></p>
   <ul>
     <li><a class="symlink" href="/packages/release/BiocViews.html#___Software">Software</a>,
