--- a/layouts/_documentation.html
+++ b/layouts/_documentation.html
@@ -1,8 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">
-    Documentation <span class="olive">&raquo;</span>
-  </p>
+  <p class="sidebar-box-header">Documentation</p>
   <p><em>Bioconductor</em></p>
   <ul>
     <li>
