--- a/layouts/_install.html
+++ b/layouts/_install.html
@@ -1,6 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">Install <span class="olive">&raquo;</span></p>
+  <p class="sidebar-box-header">Install</p>
 
   <ul>
     <li>
