edited sidebar content

--- a/layouts/_bioc_older_packages.html
+++ b/layouts/_bioc_older_packages.html
@@ -1,6 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">
+  <p class="format-bold">
     <a href="/about/release-announcements/">Previous Releases</a>
   </p>
   <p>
