--- a/layouts/_bioc_release_packages.html
+++ b/layouts/_bioc_release_packages.html
@@ -4,16 +4,18 @@
     <p>Bioconductor's stable, semi-annual release:</p>
   </div>
   <nav>
-    <div><a class="symlink " href="/packages/release/BiocViews.html#___Software"> Analysis software packages </a><img src="/images/icons/svgs/chevron-right-sidebar.svg"/></div>
-    <div><a class="symlink" href="/packages/release/BiocViews.html#___AnnotationData"> Annotation packages</a><img src="/images/icons/svgs/chevron-right-sidebar.svg"/></div>
-    <div><a class="symlink" href="/packages/release/BiocViews.html#___ExperimentData"> Illustrative experiment data packages</a><img src="/images/icons/svgs/chevron-right-sidebar.svg"/></div>
-    <div><a class="symlink" href="/packages/release/BiocViews.html#___Workflow">Workflow packages</a> <img src="/images/icons/svgs/chevron-right-sidebar.svg"/></div>
-    <div><a class="symlink" href="/books/release/">Online books</a><img src="/images/icons/svgs/chevron-right-sidebar.svg"/></div>
-   <div><a href="/news/bioc_<%=config[:release_version].sub(".", "_")%>_release">  Latest release announcement</a><img src="/images/icons/svgs/chevron-right-sidebar.svg"/></div>
+    <div><a class="symlink " href="/packages/release/BiocViews.html#___Software"> Analysis software packages </a></div>
+    <div><a class="symlink" href="/packages/release/BiocViews.html#___AnnotationData"> Annotation packages</a></div>
+    <div><a class="symlink" href="/packages/release/BiocViews.html#___ExperimentData"> Illustrative experiment data packages</a></div>
+    <div><a class="symlink" href="/packages/release/BiocViews.html#___Workflow">Workflow packages</a> </div>
+    <div><a class="symlink" href="/books/release/">Online books</a></div>
+   <div><a href="/news/bioc_<%=config[:release_version].sub(".", "_")%>_release">  Latest release announcement</a></div>
   </nav>
-  <p class="bottom-note text-small">Bioconductor is also available via 
-    <a class="text-small" href="/help/docker/">Docker Images </a>
-    and for use in the 
-    <a class="text-small" href="https://anvil.bioconductor.org/">AnVIL.</a>
-  </p>
+  <div class="bottom-note">
+    <p class="text-small">Bioconductor is also available via 
+      <a class="text-small" href="/help/docker/">Docker Images </a>
+      and for use in the 
+      <a class="text-small" href="https://anvil.bioconductor.org/">AnVIL.</a>
+    </p>
+  </div>
 </div>
