--- a/layouts/_compendia.html
+++ b/layouts/_compendia.html
@@ -1,6 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">Compendia</p>
+  <p class="format-bold">Compendia</p>
   <ul>
     <li><a href="compendia/genemetaex/">GeneMetaEx</a></li>
     <li><a href="compendia/golubrr/">GolubRR</a></li>
