--- a/layouts/_publications.html
+++ b/layouts/_publications.html
@@ -1,6 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="sidebar-box-header"><a href="/help/publications/">Publications</a>
+  <p class="format-bold"><a href="/help/publications/">Publications</a>
   </p>
   <p>Scientific literature</p>
   <ul>
