--- a/assets/style/sidebar.css
+++ b/assets/style/sidebar.css
@@ -1,12 +1,18 @@
 .left-col-inner {
+  margin-top: 20px;
   max-width: 284px;
   min-width: 284px;
+  position: sticky;
+  top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
-.left-col-inner > {
-  width: 100%;
-}
+
 .internal-nav {
-  min-width: 284px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -48,15 +54,17 @@
 }
 
 .sidebar-box {
-  max-width: 284px;
-  min-width: 284px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   background: white;
   border: solid 1px var(--primary-p75);
   border-radius: 8px;
   padding: 8px;
+  gap: 8px;
 }
 
-.sidebar-box-header {
+.format-bold {
   display: flex;
   padding: 8px 8px 16px 8px;
   flex-direction: column;
@@ -77,13 +85,17 @@
   align-items: center;
   gap: 8px;
   align-self: stretch;
+  background-image: url("/images/icons/svgs/chevron-right-sidebar.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
 }
 
 .bottom-note {
-  border-left: 3px solid var(--primary-p-300, #3792ad);
-  display: flex;
-  align-items: flex-start;
-  align-self: stretch;
+  padding: 1.25rem 0.5rem 1rem 0.75rem;
+}
 
-  padding: 20px 8px 16px 12px;
+.bottom-note > p {
+  border-left: 0.1875rem solid var(--primary-p-300, #3792ad);
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
