--- a/layouts/_bioc2015_sponsors.html
+++ b/layouts/_bioc2015_sponsors.html
@@ -1,7 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-
-  <p class="sidebar-box-header">Sponsors</p>
+  <p class="format-bold">Sponsors</p>
 
   <a href="http://www.novartis.com/">
     <img
