--- a/layouts/_bioc2018_sponsors.html
+++ b/layouts/_bioc2018_sponsors.html
@@ -1,7 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-
-  <p class="sidebar-box-header">Sponsors</p>
+  <p class="format-bold">Sponsors</p>
   <a href="https://www.roswellpark.org/">
     <img
       src="/images/sponsors/rpci-logo_1.png"
