--- a/layouts/_community_help.html
+++ b/layouts/_community_help.html
@@ -1,6 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">
+  <p class="format-bold">
     <a href="/help/community/">Community Help Resources</a>
   </p>
   <p>Community-contributed resources for learning Bioconductor:</p>
