--- a/layouts/_documentation.html
+++ b/layouts/_documentation.html
@@ -1,6 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">Documentation</p>
+  <p class="format-bold">Documentation</p>
   <p><em>Bioconductor</em></p>
   <ul>
     <li>
