--- a/layouts/_faq.html
+++ b/layouts/_faq.html
@@ -1,6 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="sidebar-box-header"><a href="/help/faq/">FAQ</a>
+  <p class="format-bold"><a href="/help/faq/">FAQ</a>
   </p>
   <p>
     Read the Frequently Asked Questions for Bioconductor:
