--- a/layouts/_help_using_R.html
+++ b/layouts/_help_using_R.html
@@ -1,6 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">
+  <p class="format-bold">
     <a href="http://cran.r-project.org/">Using R</a>
   </p>
   <p>
