--- a/layouts/_install.html
+++ b/layouts/_install.html
@@ -1,6 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">Install</p>
+  <p class="format-bold">Install</p>
 
   <ul>
     <li>
