--- a/layouts/_learn.html
+++ b/layouts/_learn.html
@@ -1,6 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="200" width="1" alt=""/>
-  <p class="sidebar-box-header">Learn </p>
+  <p class="format-bold">Learn </p>
   <p>Some Useful <em>Bioconductor</em> tools</p>
   <ul>
     <li><a class="symlink" href="/help/course-materials/">Courses</a></li>
