--- a/layouts/_literature_search.html
+++ b/layouts/_literature_search.html
@@ -1,6 +1,5 @@
 <div class="sidebar-box">
-  <img src="/images/inv.gif" align="right" height="200" width="1" alt="" />
-  <p class="sidebar-box-header">Literature Search</p>
+  <p class="format-bold">Literature Search</p>
   <ul>
     <li>
       <a
