--- a/layouts/_main_top_panel.html
+++ b/layouts/_main_top_panel.html
@@ -1,6 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="30" width="1" alt="" />
-  <p class="sidebar-box-header">Bioc2023 Conference</p>
+  <p class="format-bold">Bioc2023 Conference</p>
   <p>
     This is a hybrid in-person (Boston, MA, USA) and virtual conference from
     August 2-4, 2023.
