--- a/layouts/_temporaryAnnouncement.html
+++ b/layouts/_temporaryAnnouncement.html
@@ -1,6 +1,6 @@
 <div class="sidebar-box">
   <img src="/images/inv.gif" align="right" height="30" width="1" alt="" />
-  <p class="sidebar-box-header" style="color: red">Feedback Needed!</p>
+  <p class="format-bold" style="color: red">Feedback Needed!</p>
   <p>We are redesigning this website and we need YOUR input!</p>
   <p>
     Whether you are a wet lab biologist, student, data analyst, educator, expert
