--- a/layouts/_bioc_older_packages.html
+++ b/layouts/_bioc_older_packages.html
@@ -1,11 +1,13 @@
 <div class="sidebar-box">
-  <p class="format-bold">
-    <a href="/about/release-announcements/">Previous Releases</a>
-  </p>
-  <p>
-    <em>Bioconductor</em> (<em>R</em>)
-    <a href="/about/release-announcements/#release-versions">versions</a>:
-  </p>
+  <div class="sidebar-box-header">
+    <p class="format-bold">
+      <a href="/about/release-announcements/">Previous Releases</a>
+    </p>
+    <p>
+      <em>Bioconductor</em> (<em>R</em>)
+      <a href="/about/release-announcements/#release-versions">versions</a>:
+    </p>
+  </div>
   <ul class="inline_list">
     <li>
       <a href="/packages/3.16/BiocViews.html#___Software">3.16&nbsp;(4.2)</a>
