--- a/layouts/_community_help.html
+++ b/layouts/_community_help.html
@@ -1,8 +1,10 @@
 <div class="sidebar-box">
-  <p class="format-bold">
-    <a href="/help/community/">Community Help Resources</a>
-  </p>
-  <p>Community-contributed resources for learning Bioconductor:</p>
+  <div class="sidebar-box-header">
+    <p class="format-bold">
+      <a href="/help/community/">Community Help Resources</a>
+    </p>
+    <p>Community-contributed resources for learning Bioconductor:</p>
+  </div>
   <ul>
     <li>
       <a href="http://genomicsclass.github.io/book/">Book</a> and
