--- a/layouts/_compendia.html
+++ b/layouts/_compendia.html
@@ -1,5 +1,7 @@
 <div class="sidebar-box">
-  <p class="format-bold">Compendia</p>
+  <div class="sidebar-box-header">
+    <p class="format-bold">Compendia</p>
+  </div>
   <ul>
     <li><a href="compendia/genemetaex/">GeneMetaEx</a></li>
     <li><a href="compendia/golubrr/">GolubRR</a></li>
