--- a/assets/style/sidebar.css
+++ b/assets/style/sidebar.css
@@ -64,7 +64,7 @@
   gap: 8px;
 }
 
-.format-bold {
+.sidebar-box-header {
   display: flex;
   padding: 8px 8px 16px 8px;
   flex-direction: column;
