--- a/layouts/_package_build_reports_and_svn.html
+++ b/layouts/_package_build_reports_and_svn.html
@@ -1,18 +1,20 @@
 <div class="sidebar-box">
-  <p class="format-bold">Source Code &amp; Build Reports</p>
-  <p>
-    Source code is stored in
-    <a href="https://contributions.bioconductor.org/git-version-control.html"
-      >Git</a
-    >.
-  </p>
+  <div class="sidebar-box-header">
+    <p class="format-bold">Source Code &amp; Build Reports</p>
+    <p>
+      Source code is stored in
+      <a href="https://contributions.bioconductor.org/git-version-control.html"
+        >Git</a
+      >.
+    </p>
+  </div>
   <p>Software packages are built and checked nightly. Build reports:</p>
-  <ul>
+  <nav>
     <li><a href="/checkResults/">All</a></li>
     <li><a href="/checkResults/release/bioc-LATEST/">Release</a></li>
     <li><a href="/checkResults/devel/bioc-LATEST/">Development</a></li>
     <li><a href="/packages/stats/">Package Download Statistics</a></li>
     <li><a href="https://code.bioconductor.org/">Browsable code base</a></li>
-  </ul>
+  </nav>
   &nbsp;
 </div>
