--- a/layouts/components/examples/sidebar.html
+++ b/layouts/components/examples/sidebar.html
@@ -1,13 +1,14 @@
-<nav class="internal-nav" aria-label="Page navigation">
+<div class="sidebar-nav">
   <p class="format-bold">Jump to:</p>
-
-  <a class="sidebar-nav-button selected-nav" href="#heading-text-1"
-    >Heading text 1</a
-  >
-  <a class="sidebar-nav-button" href="#heading-text-2">Heading text 2</a>
-  <a class="sidebar-nav-button" href="#heading-text-3">Heading text 3</a>
-  <a class="sidebar-nav-button" href="#heading-text-4">Heading text 4</a>
-  <a class="sidebar-nav-button" href="#code-blocks">Code blocks</a>
-  <a class="sidebar-nav-button" href="#heading-text-5">Heading text 5</a>
-  <a class="sidebar-nav-button" href="#heading-text-6">Heading text 6</a>
-</nav>
+  <nav class="internal-nav" aria-label="Page navigation">
+    <a class="sidebar-nav-button selected-nav" href="#heading-text-1"
+      >Heading text 1</a
+    >
+    <a class="sidebar-nav-button" href="#heading-text-2">Heading text 2</a>
+    <a class="sidebar-nav-button" href="#heading-text-3">Heading text 3</a>
+    <a class="sidebar-nav-button" href="#heading-text-4">Heading text 4</a>
+    <a class="sidebar-nav-button" href="#code-blocks">Code blocks</a>
+    <a class="sidebar-nav-button" href="#heading-text-5">Heading text 5</a>
+    <a class="sidebar-nav-button" href="#heading-text-6">Heading text 6</a>
+  </nav>
+</div>
