--- a/assets/style/sidebar.css
+++ b/assets/style/sidebar.css
@@ -10,7 +10,7 @@
   gap: 1rem;
 }
 
-.internal-nav {
+.sidebar-nav {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -20,6 +20,13 @@
   border-radius: 8px;
   background: linear-gradient(white, white) padding-box,
     var(--gradient-brand) border-box;
+}
+
+.internal-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 8px;
 }
 
 .internal-nav p {
@@ -97,4 +104,23 @@
   border-left: 0.1875rem solid var(--primary-p-300, #3792ad);
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+@media (width <= 768px) {
+  .left-col-inner {
+    position: fixed;
+    top: 11rem;
+  }
+
+  .sidebar-nav p {
+    margin-bottom: 0px;
+  }
+
+  .internal-nav {
+    display: none;
+  }
+
+  .open {
+    display: block;
+  }
 }
