--- a/assets/style/hero.css
+++ b/assets/style/hero.css
@@ -3,7 +3,12 @@
   margin: 0 auto;
   text-align: center;
   background-color: white;
-  padding: 4.5rem 0;
+  padding-top: 2rem;
+}
+
+.homepage-container {
+  padding-top: 2rem;
+  padding-bottom: 4rem;
 }
 
 .hero h1 {
