--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -227,7 +227,7 @@
 .dev-nav p a {
   text-decoration: underline;
   color: #fff;
-  font-family: Courier;
+  font-family: Courier, monospace;
 }
 
 .dev-nav p {
@@ -261,6 +261,12 @@
   padding-bottom: 1rem;
 }
 
+.data-dev-logo p {
+  text-align: center;
+  margin-bottom: 0;
+  padding-top: 0.25rem;
+}
+
 .dev-quote p:first-child {
   margin-top: 0;
 }
@@ -278,12 +284,6 @@
   font-size: 1.1rem;
   font-weight: 700;
   line-height: 130%;
-}
-
-.data-dev-logo p {
-  text-align: center;
-  margin-bottom: 0;
-  padding-top: 0.25rem;
 }
 
 .events {
