--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,7 +50,7 @@
 
       <% if (!has_sunav?(@item) && !@item[:fullwidth]) %>
         </div>
-      <% endif %>
+      <% end %>
     </main>
 
     <%= render("/components/footer/") %>
