--- a/layouts/default.html
+++ b/layouts/default.html
@@ -48,7 +48,7 @@
           <%= yield if block_given? %>
         </section>
 
-      <% if (!has_sunav?(@item) && !@item[:fullwidth]) %>
+      <% if (!has_subnav?(@item) && !@item[:fullwidth]) %>
         </div>
       <% end %>
     </main>
