--- a/layouts/components/homepage/events.html
+++ b/layouts/components/homepage/events.html
@@ -1,4 +1,4 @@
-<section class="events">
+<section class="events container">
   <span class="events-header">
     <h3>🗓️ Events</h3>
     <a class="button white-button format-bold" href="/help/events/">See all events
