--- a/layouts/components/homepage/info.html
+++ b/layouts/components/homepage/info.html
@@ -1,4 +1,4 @@
-<section class="information-container">
+<section class="information-container container">
   <div class="about-bioconductor">
     <div>
       <img src="images/icons/svgs/DNA.svg" alt="DNA" />
