--- a/layouts/components/homepage/join.html
+++ b/layouts/components/homepage/join.html
@@ -1,4 +1,4 @@
-<section class="gradient-border join">
+<section class="gradient-border join container">
   <div class="gradient-border-inner section-block">
     <input type="radio" class="tabs-join-radio" name="tabs-join" id="join-tab1" checked>
     <div class="join-row">
