--- a/layouts/components/homepage/learn.html
+++ b/layouts/components/homepage/learn.html
@@ -1,4 +1,4 @@
-<div class="gradient-border learn">
+<div class="gradient-border learn container">
   <div class="section-block learn-block">
     <h2>Learn</h2>
     <div class="learn-content">
