--- a/layouts/components/homepage/persona_info.html
+++ b/layouts/components/homepage/persona_info.html
@@ -1,4 +1,4 @@
-<div class="data-scientist-and-developer-info">
+<div class="data-scientist-and-developer-info container">
   <input type="radio" class="tab-radio data-scientist-radio" name="homepage-tab" id="data-scientist-tab" checked />
   <label for="data-scientist-tab" class="tab-label data-scientist-radio format-bold">
     For Data scientists
