--- a/layouts/components/homepage/events.html
+++ b/layouts/components/homepage/events.html
@@ -1,5 +1,5 @@
-<section class="events container">
-  <span class="events-header">
+<section class="events">
+  <span class="events-header container">
     <h3>🗓️ Events</h3>
     <a class="button white-button format-bold" href="/help/events/">See all events
       <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" viewBox="0 0 14 15" fill="none">
