--- a/assets/style/sidebar.css
+++ b/assets/style/sidebar.css
@@ -11,6 +11,7 @@
 }
 
 .sidebar-nav {
+  transition: 0.3s;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -23,6 +24,7 @@
 }
 
 .internal-nav {
+  transition: 0.3s;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -121,6 +123,7 @@
   }
 
   .open {
+    transition: 0.3s;
     display: block;
   }
 }
