--- a/layouts/components/homepage/events.html
+++ b/layouts/components/homepage/events.html
@@ -1,10 +1,22 @@
 <section class="events">
   <span class="events-header container">
     <h3>🗓️ Events</h3>
-    <a class="button white-button format-bold" href="/help/events/">See all events
-      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" viewBox="0 0 14 15" fill="none">
-        <path d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333" stroke="#3792AD" stroke-width="2.2" stroke-linecap="round"
-          stroke-linejoin="round" />
+    <a class="button white-button format-bold" href="/help/events/"
+      >See all events
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="14"
+        height="15"
+        viewBox="0 0 14 15"
+        fill="none"
+      >
+        <path
+          d="M5.25 3.66665L9.33333 7.74998L5.25 11.8333"
+          stroke="#3792AD"
+          stroke-width="2.2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
       </svg>
     </a>
   </span>
@@ -51,9 +63,7 @@
     </div>
     <div class="event-card-container">
       <div class="event-card">
-        <p class="format-bold">
-          BioC2023: Where Software and Biology Connect
-        </p>
+        <p class="format-bold">BioC2023: Where Software and Biology Connect</p>
         <div class="event-date-location">
           <span class="event-date-location">
             <time class="text-small" datetime="2023-08-02">02</time> -
@@ -77,96 +87,5 @@
         </div>
       </div>
     </div>
-
-    <div class="event-card-container">
-      <div class="event-card">
-        <p class="format-bold">
-          ISMB/ECCB 2023 tutorial: Orchestrating Large-Scale Single-Cell
-          Analysis with Bioconductor
-        </p>
-        <div class="event-date-location">
-          <span>
-            <time class="text-small" datetime="2023-07-23">23 July 2023</time>
-          </span>
-          <p class="text-small">Lyon, France</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="event-card-container">
-      <div class="event-card">
-        <p class="format-bold">
-          ISMB/ECCB 2023 tutorial: Orchestrating Large-Scale Single-Cell
-          Analysis with Bioconductor
-        </p>
-        <div class="event-date-location">
-          <span>
-            <time class="text-small" datetime="2023-07-23">23 July 2023</time>
-          </span>
-          <p class="text-small">Lyon, France</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="event-card-container">
-      <div class="event-card">
-        <p class="format-bold">
-          ISMB/ECCB 2023 tutorial: Orchestrating Large-Scale Single-Cell
-          Analysis with Bioconductor
-        </p>
-        <div class="event-date-location">
-          <span>
-            <time class="text-small" datetime="2023-07-23">23 July 2023</time>
-          </span>
-          <p class="text-small">Lyon, France</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="event-card-container">
-      <div class="event-card">
-        <p class="format-bold">
-          ISMB/ECCB 2023 tutorial: Orchestrating Large-Scale Single-Cell
-          Analysis with Bioconductor
-        </p>
-        <div class="event-date-location">
-          <span>
-            <time class="text-small" datetime="2023-07-23">23 July 2023</time>
-          </span>
-          <p class="text-small">Lyon, France</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="event-card-container">
-      <div class="event-card">
-        <p class="format-bold">
-          ISMB/ECCB 2023 tutorial: Orchestrating Large-Scale Single-Cell
-          Analysis with Bioconductor
-        </p>
-        <div class="event-date-location">
-          <span>
-            <time class="text-small" datetime="2023-07-23">23 July 2023</time>
-          </span>
-          <p class="text-small">Lyon, France</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="event-card-container">
-      <div class="event-card">
-        <p class="format-bold">
-          ISMB/ECCB 2023 tutorial: Orchestrating Large-Scale Single-Cell
-          Analysis with Bioconductor
-        </p>
-        <div class="event-date-location">
-          <span>
-            <time class="text-small" datetime="2023-07-23">23 July 2023</time>
-          </span>
-          <p class="text-small">Lyon, France</p>
-        </div>
-      </div>
-    </div>
-
   </div>
 </section>
