--- a/assets/style/get-started.css
+++ b/assets/style/get-started.css
@@ -101,10 +101,15 @@
     display: none;
   }
 
+  .instructions-install {
+    padding-bottom: 0;
+  }
+
   .install-row {
     flex-direction: column;
 
     /* stylelint-disable-next-line value-no-vendor-prefix */
     width: -webkit-fill-available;
+    gap: 1rem;
   }
 }
